k3s/manifests/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: default-insecure-skip-verify@kubernetescrd
spec:
  ports:
    - port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.33.111.44
    ports:
      - port: 8006
