k3s/manifests/proxmox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pve.arpatek.dev
      secretName: arpatek-dev-tls
  rules:
    - host: pve.arpatek.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox-external
                port:
                  number: 8006
